--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Music.ico" type="image/x-icon">
+    <title>Músicas e bandas</title>
 </head>
 <body>
-    for fun - Ahorita. <br>
-    <audio src="01-Ahorita.mp3" controls="true" autoplay="true"></audio>
+    <div class="musica">
+        <img src="forfun.jpg" alt="foto da banda for fun">
+        <p>For fun - Ahorita</p>
+        <audio src="01-Ahorita.mp3" controls="true" autoplay="true"></audio>
+    </div>
 </body>
 </html>
